Sonnar fixes